--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "next": "^15.3.1",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
+    "react-color": "^2.19.3",
     "react-cookie": "^8.0.1",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
