--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.5.1",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "js-cookie": "^3.0.5",
     "next": "^15.3.1",
