--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-charts": "^8.5.1",
     "@mui/x-date-pickers": "^8.5.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "next": "^15.3.1",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
     "react-cookie": "^8.0.1",
     "react-dom": "^19.1.0",
+    "recharts": "^2.15.3",
     "tinycolor2": "^1.6.0"
   },
   "devDependencies": {
