--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "next": "^15.3.1",
+    "next-pwa": "^5.6.0",
     "notistack": "^3.0.2",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
